--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,10 @@ psycopg2==2.9.3
 Pygments==2.11.2
 python-dateutil==2.8.2
 pytz==2022.1
+pywin32==303
 pyzmq==22.3.0
 six==1.16.0
-SQLAlchemy==1.3.23
+SQLAlchemy==1.4.39
 tornado==6.1
 traitlets==5.1.1
 typing_extensions==4.2.0
