--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,6 @@ psycopg2==2.9.3
 Pygments==2.11.2
 python-dateutil==2.8.2
 pytz==2022.1
-pypiwin32==223
 pyzmq==22.3.0
 six==1.16.0
 SQLAlchemy==1.4.39
@@ -36,3 +35,4 @@ wcwidth==0.2.5
 Werkzeug==2.1.2
 wincertstore==0.2
 zipp==3.8.0
+pypiwin==232
